# DA-Scrapers

./: .gitignore  AGENTS.md  README.md  list.txt  pyproject.toml
output/behanbox_caste/: records.json  run_report.json
output/brambedkar_constitution/: records.json  run_report.json
output/brambedkar_constitution/assets/dr-babasaheb-ambedkar-digital-library/: constitution-india-bengali-2022.html  constitution-india-diglot-english-marathi.html  constitution-india-english.html  constitution-india-hindi-2024-edition.html  constitution-india-marathi.html  constitution-of-india-in-tamil.html  original-manuscript-constitution-india.html
output/columbia_dalit_websites/: records.json  run_report.json
output/cvmc_home/: records.json  run_report.json
output/cvmc_supreme_court_judgment/: records.json  run_report.json
output/cvmc_supreme_court_judgment/assets/supreme-court-judgment-the-scheduled-castes-and-the-schedule-tribes-prevention-of-atrocities-act-1989/: supreme-court-judgment.html
output/epw_search_dalit/: records.json  run_report.json
output/ghdi_docpage_4505/: records.json  run_report.json
output/global_ambedkarites/: records.json  run_report.json
output/sansad_constituent_assembly_debates/: records.json  run_report.json
output/scroll_search_dalits/: records.json  run_report.json
src/dalit_archive_scrapers/: __init__.py  definitions.py  extractor.py  models.py  runner.py  utils.py
src/dalit_archive_scrapers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_utils.py
